--- a/style.css
+++ b/style.css
@@ -2,4 +2,9 @@
     box-sizing: border-box;
   }
 
-  
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #efefef;
+    font-family: 'Open Sans', sans-serif;
+  }
