--- a/style.css
+++ b/style.css
@@ -8,3 +8,21 @@
     background-color: #efefef;
     font-family: 'Open Sans', sans-serif;
   }
+
+ .main-nav {
+  background-color: #43281c;
+  color: #fbf2c0;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: normal;
+ }
+
+ .logo {
+  height: 25px;
+  position: relative;
+  top: 3px;
+ }
+
+ 
