--- a/style.css
+++ b/style.css
@@ -9,6 +9,17 @@
     font-family: 'Open Sans', sans-serif;
   }
 
+.page {
+display: grid;
+row-gap: 30px;
+column-gap: 30px;
+width: 100%;
+padding: 30px;
+margin: 0 auto;
+
+
+}
+
  .main-nav {
   background-color: #43281c;
   color: #fbf2c0;
@@ -25,4 +36,12 @@
   top: 3px;
  }
 
- 
+.box {
+  background-color: #eee1d5;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgb(0 0 0 / 0.2);
+  padding: 15px;
+  margin-bottom: 20px;
+  width: 100%;
+
+}
