--- a/style.css
+++ b/style.css
@@ -52,9 +52,53 @@ margin: 0 auto;
   font-size: 16px;
 }
 
-.item {
+.items {
   list-style: none;
   padding: 0;
   margin: 0;
 }
+
+.item {
+  border-bottom: 2px solid #ddb892;
+  display: grid;
+  padding: 10px 0;
+  grid-template-columns: 1fr 8fr 1fr;
+  grid-template-areas: 
+  "quantity title price"
+  "quantity options price";
+  row-gap: 8px;
+}
+
+.item:last-child {
+  border-bottom: none;
+}
+
+.item-quantity {
+  grid-area: quantity;
+}
+
+.item-title {
+  grid-area: title;
+  font-weight: bold;
+}
+
+.item-price {
+  grid-area: price;
+  font-weight: bold;
+}
+
+.item-options-list {
+  grid-area: options;
+  color: #b08968;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+}
+
+.item-option {
+  margin-bottom: 5px;
+}
+
+
 
