added  input css

--- a/style.css
+++ b/style.css
@@ -100,5 +100,18 @@ margin: 0 auto;
   margin-bottom: 5px;
 }
 
+.input-group{
+  position: relative;
+  margin-bottom: 20px;
+}
 
+.user-input{
+  background-color: rgba(0,0,0,0);
+  border: 2px #885a2d solid;
+  padding: 8px;
+  border-radius: 100px;
+  width: 100%;
+  text-indent: 18px;
+  
+}
 
