--- a/style.css
+++ b/style.css
@@ -129,5 +129,10 @@ margin: 0 auto;
   max-width: 200px;
 }
 
-
+.total {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
