--- a/style.css
+++ b/style.css
@@ -154,3 +154,12 @@ margin: 0 auto;
   font-weight: bold;
 }
 
+.checkout {
+  background-color: #deb993;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  border-radius: 100px;
+  font-size: 16px;
+
+}
