--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ column-gap: 30px;
 width: 100%;
 padding: 30px;
 margin: 0 auto;
+grid-template-areas:
+  "order payment"
+  "total total";
+  grid-template-columns: 1fr 1fr;
 
 
 }
